# RPGTextGameCPP

./: .gitignore  CMakeLists.txt  README.md  assetdata.txt
appdata/: assetdata.txt  map.txt  map1.txt  map2.txt
src/: Game.cpp  Game.h  Player.cpp  Player.h  main.cpp
src/AssetDatabase/: AssetDatabase.cpp  AssetDatabase.h  Prefab.cpp  Prefab.h
src/Enemies/: CombatUnit.cpp  CombatUnit.h  Encounter.cpp  Encounter.h  Enemy.cpp  Enemy.h  UnitAttack.cpp  UnitAttack.h  UnitHealth.cpp  UnitHealth.h  UnitMana.cpp  UnitMana.h  UnitStat.cpp  UnitStat.h
src/Player/: Player.cpp  Player.h
src/Utilities/: StringUtility.h
src/WorldMap/: MapPosition.h  MapTile.cpp  MapTile.h  WorldMap.cpp  WorldMap.h
